feat: partners section

--- a/src/pages/main/components/ceo/ceo.module.scss
+++ b/src/pages/main/components/ceo/ceo.module.scss
@@ -55,7 +55,7 @@
         margin-bottom: 25px;
         font-size: 27px;
         line-height: 32px;
-        color: #1fad98;
+        color: #f9b025;
         @media (max-width: 1155px) {
           font-size: 20px;
         }
