--- a/src/pages/main/home.module.scss
+++ b/src/pages/main/home.module.scss
@@ -11,7 +11,7 @@
   }
   .slick-active button {
     height: 8px !important;
-    background-color: #1fad98 !important;
+    background-color: #f9b025 !important;
   }
 
   .slick-list {
@@ -25,7 +25,7 @@
       &:hover button {
         height: 8px !important;
         top: 11px !important;
-        background-color: #1fad98;
+        background-color: #f9b025;
       }
     }
     li button {
