--- a/src/pages/main/components/partners/partners.module.scss
+++ b/src/pages/main/components/partners/partners.module.scss
@@ -1,13 +1,16 @@
 .bg-color {
   background-color: #f4f6f5;
-  z-index: -2;
+  z-index: -3;
+  position: inherit;
 }
 
-.features {
+.partners {
   max-width: 1440px;
-  padding: 50px 7vw 50px;
-  margin: auto;
-  .fetures-container {
+  margin: 0 auto;
+  padding: 100px 7vw 100px;
+  z-index: 3;
+  position: relative;
+  .title-container {
     position: relative;
     margin-bottom: 45px;
     @media (max-width: 1155px) {
@@ -22,25 +25,24 @@
     @media (max-width: 576px) {
       margin-bottom: 15px;
     }
-    .big-title {
+    .outline-title {
       color: #f4f6f5;
       text-shadow: -1px -1px 0 #c9cbcb, 1px -1px 0 #c9cbcb, -1px 1px 0 #c9cbcb,
         1px 1px 0 #c9cbcb;
       font-size: 120px;
-      font-size: 60px;
       position: absolute;
-      z-index: 1;
-      top: -28px;
-      left: 20px;
+      bottom: -7px;
+      z-index: -1;
+      width: 100%;
+      text-align: center;
+
       @media (max-width: 768px) {
-        font-size: 40px;
+        font-size: 70px;
         top: -6px;
-        left: 22px;
       }
       @media (max-width: 576px) {
-        font-size: 30px;
+        font-size: 40px;
         top: -6px;
-        left: 22px;
       }
     }
     .small-title {
@@ -51,14 +53,17 @@
       text-transform: uppercase;
       color: #a9aeb3;
       margin-bottom: 13px;
-      position: relative;
-      z-index: 5;
+      z-index: 2;
+      text-align: center;
+      display: block;
     }
-
     .title {
       font-size: 45px;
       line-height: 50px;
       max-width: 600px;
+      text-align: center;
+      margin: auto;
+      z-index: 0;
       span {
         color: #f9b025;
       }
@@ -82,41 +87,25 @@
     }
   }
 
-  .cards-container {
+  .parners-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     align-items: center;
     justify-content: space-between;
     gap: 15px;
 
-    .card {
-      padding: 27px 30px 37px 40px;
-      border-radius: 0 50px 0 0;
-      background: white;
-      @media (max-width: 768px) {
-        padding: 20px 25px 30px 30px;
+    .partner {
+      padding: 33px 46px;
+      background-color: white;
+      height: 150px;
+      transition: 0.3s linear;
+      &:hover {
+        height: 120px;
       }
-      @media (max-width: 576px) {
-        padding: 15px 20px 25px 30px;
-      }
-
-      .card-title {
-        font-size: 20px;
-        font-family: "Inter", sans-serif;
-        width: max-content;
-      }
-
-      .card-subtitle {
-        font-size: 16px;
-        color: #696e76;
-        margin: 8px 0 27px;
-        line-height: 20px;
-        text-align: unset;
-      }
-
-      .icon {
-        width: 45px;
-        height: 45px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
   }
