syte: fix video

--- a/src/pages/main/components/ceo/ceo.module.scss
+++ b/src/pages/main/components/ceo/ceo.module.scss
@@ -1,8 +1,7 @@
 .ceo {
   max-width: 1440px;
-  margin: auto;
-  padding: 0 12vw;
-  margin: 50px 0;
+  padding: 0 7vw;
+  margin: 50px auto;
 
   .title {
     font-size: 45px;
