--- a/src/pages/main/components/features/features.module.scss
+++ b/src/pages/main/components/features/features.module.scss
@@ -5,7 +5,8 @@
 
 .features {
   max-width: 1440px;
-  padding: 50px 12vw 50px;
+  padding: 50px 7vw 50px;
+  margin: auto;
   .fetures-container {
     position: relative;
     margin-bottom: 45px;
