--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -4,7 +4,7 @@
   .container {
     max-width: 1440px;
     margin: auto;
-    padding: 50px 12vw;
+    padding: 50px 7vw;
     display: block;
     display: flex;
     justify-content: space-between;
@@ -23,6 +23,7 @@
   .logo {
     width: 190px;
     height: 64px;
+    cursor: pointer;
   }
   .links {
     display: flex;
@@ -32,6 +33,7 @@
     svg {
       color: #ffff;
       transition: 0.1s linear;
+      cursor: pointer;
       &:hover {
         color: #f9b026;
       }
