--- a/src/pages/main/components/moreAbout/moreAbout.module.scss
+++ b/src/pages/main/components/moreAbout/moreAbout.module.scss
@@ -1,24 +1,26 @@
 .wrapper {
   position: relative;
   pointer-events: stroke;
+  transition: all 0.3s;
   .bg {
-    pointer-events: auto;
     width: 100%;
-    background-image: url(/src/assets/images/truckbg2.jpeg);
+    background-image: url("https://images.unsplash.com/photo-1562811950-41d4a4944a4b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
     background-position: center;
     background-size: cover;
     overflow: hidden;
+    height: 500px;
+    transition: all 0.3s;
 
     video {
       width: 100%;
       visibility: hidden;
       transition: opacity 0.5s, visibility 0.5s;
+      height: 100%;
+      object-fit: cover;
     }
-    &:hover {
-      video {
-        opacity: 1;
-        visibility: visible;
-      }
+    &:hover video {
+      opacity: 1;
+      visibility: visible;
     }
   }
   h3 {
