--- a/src/pages/main/home.module.scss
+++ b/src/pages/main/home.module.scss
@@ -14,6 +14,9 @@
     background-color: #1fad98 !important;
   }
 
+  .slick-list {
+    height: 100vh;
+  }
   .slick-dots {
     bottom: -87px;
     li {
