--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -1,5 +1,6 @@
 .header {
-  background: url("https://images.unsplash.com/photo-1586828909684-ea8a07d2531a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("https://images.unsplash.com/photo-1631744591853-998c4308bbb0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
   height: 100vh;
   width: 100%;
   background-position: center;
