--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -1,3 +1,6 @@
+.toast {
+  background-color: red;
+}
 .header {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("https://images.unsplash.com/photo-1631744591853-998c4308bbb0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
@@ -31,5 +34,201 @@
       line-height: 40px;
       text-align: center;
     }
+  }
+}
+
+.contact--us__section {
+  width: 100%;
+  background: url("../../assets/images/map_achievements_2-2.png") no-repeat
+    center;
+  background-position: cover;
+
+  .contact--us__container {
+    max-width: 1440px;
+    margin: auto;
+    padding: 100px 7vw 100px;
+    display: flex;
+    gap: 100px;
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      gap: 50px;
+    }
+
+    .info-container {
+      width: 30%;
+      @media (max-width: 1024px) {
+        width: 100%;
+      }
+
+      .small-title {
+        font-size: 12px;
+        line-height: 1.6;
+        letter-spacing: 0.15em;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #a9aeb3;
+        margin-bottom: 13px;
+      }
+      .title {
+        font-size: 50px;
+        line-height: 50px;
+        max-width: 700px;
+        margin-bottom: 29px;
+        span {
+          color: #f9b025;
+        }
+        @media (max-width: 1155px) {
+          font-size: 45px;
+          max-width: 100%;
+        }
+        @media (max-width: 992px) {
+          font-size: 40px;
+          line-height: 45px;
+        }
+        @media (max-width: 768px) {
+          font-size: 35px;
+          line-height: 30px;
+        }
+        @media (max-width: 576px) {
+          font-size: 25px;
+          line-height: 30px;
+        }
+      }
+
+      .other-infos {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        padding: 10px;
+        @media (max-width: 1024px) {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+        }
+        @media (max-width: 662px) {
+          display: grid;
+          grid-template-columns: 1fr;
+        }
+        .other-container {
+          display: flex;
+          align-items: center;
+          gap: 19px;
+          .info-icon {
+            height: 60px;
+            width: 60px;
+            border-radius: 100%;
+            border: 1px solid #f9b025;
+            display: grid;
+            place-content: center;
+            cursor: pointer;
+            transition: 0.3s all;
+            &:hover {
+              background-color: #f9b025;
+              .icon {
+                color: white;
+              }
+            }
+          }
+          .info-box {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            .info-title {
+              font-size: 12px;
+              font-weight: 500;
+              text-transform: uppercase;
+              color: #767f7f;
+            }
+            .subtitle-wrapper {
+              display: flex;
+              flex-direction: column;
+              gap: 5px;
+              .info-subtitle {
+                font-size: 16px;
+                font-family: "Inter", sans-serif;
+                text-decoration: none;
+                color: black;
+                font-weight: 600;
+                &:hover {
+                  color: #f9b025;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .form-container {
+      width: 70%;
+      padding: 50px 0;
+      @media (max-width: 1024px) {
+        width: 100%;
+      }
+      h4 {
+        font-size: 20px;
+        margin-bottom: 30px;
+      }
+      .form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        gap: 20px;
+        .form-top {
+          width: 100%;
+          display: flex;
+          gap: 20px;
+        }
+
+        .input {
+          width: 100%;
+          height: 50px;
+          padding: 10px 15px;
+          color: #000;
+          background: #fff;
+          border: 1px solid #e2e2e2;
+          outline-color: #f9b025;
+        }
+
+        .btn {
+          display: block;
+          width: 169px;
+          text-align: center;
+          height: 50px;
+          font-size: 13px;
+          line-height: 46px;
+          font-weight: 500;
+          text-transform: uppercase;
+          background: transparent;
+          padding: 0 32px;
+          letter-spacing: 0;
+          text-decoration: none;
+          border: 2px solid;
+          border-radius: 0 0 15px 0;
+          -webkit-transition: all 0.3s;
+          -o-transition: all 0.3s;
+          transition: all 0.3s;
+          cursor: pointer;
+          color: #f9b025;
+          border: 2px solid #f9b025;
+
+          &:hover {
+            background: #f9b025;
+            color: white;
+            border: 2px solid #f9b025;
+          }
+        }
+      }
+    }
+  }
+}
+
+.map-container {
+  width: 100%;
+  height: 400px;
+  .map {
+    width: 100%;
+    height: 100%;
+    border: none;
   }
 }
