feat: change header photo

--- a/src/pages/main/home.module.scss
+++ b/src/pages/main/home.module.scss
@@ -61,7 +61,7 @@
 }
 .second {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://images.unsplash.com/photo-1586206670130-4c6d8e646c9a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2073&q=80");
+    url("https://www.topgear.com/sites/default/files/2022/12/0x0-Semi_13.jpg?w=1920&h=1080");
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
