fix: contact info icon

--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -115,6 +115,7 @@
           .info-icon {
             height: 60px;
             width: 60px;
+            min-width: 60px;
             border-radius: 100%;
             border: 1px solid #f9b025;
             display: grid;
