--- a/src/pages/main/components/moreAbout/moreAbout.module.scss
+++ b/src/pages/main/components/moreAbout/moreAbout.module.scss
@@ -4,7 +4,7 @@
   transition: all 0.3s;
   .bg {
     width: 100%;
-    background-image: url("https://images.unsplash.com/photo-1562811950-41d4a4944a4b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+    background-image: url("../../../../assets/images/office.jpg");
     background-position: center;
     background-size: cover;
     overflow: hidden;
